All projects with Bench config have the same Bench/javaOptions as std-benchmarks